ios_versioned_docs/version-1.33.x/reference/dyte-meeting-events.mdx
---
sidebar_position: 7
---

# DyteMeetingViewDelegate

`DyteMeetingViewDelegate` is a protocol that enlists different events that can occur in between a meeting.

```objectivec
- (void) meetingConnected;
- (void) meetingJoined;
- (void) meetingDisconnect;
- (void) meetingEnded;
- (void) participantJoin: (DyteParticipant *) participant;
- (void) participantLeave: (DyteParticipant *) participant;
- (void) roomMessage: (NSObject *) data;
- (void) message: (NSObject *) data;
- (void) activeSpeaker: (NSString *) peerId;
```

| Event             | Triggered when                                                                                                                                                                                    |
| ----------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| meetingConnected  | the participant has connected to the meeting but hasn’t started producing or consuming content streams - think of this as establishing a successful connection to the meeting and nothing else    |
| meetingJoined     | the participant actually joins the meeting, and can start producing as well as consuming content streams                                                                                          |
| meetingDisconnect | the participant gets disconnected from the meeting for any reason                                                                                                                                 |
| meetingEnded      | the meeting is ended by the host or by the organization (as an admin function)                                                                                                                    |
| participantJoin   | another participant joins the meeting ("join" here as the same context as the `meetingJoined` event)                                                                                              |
| participantLeave  | another participant disconnects from the meeting ("disconnect" here as the same context as the `disconnect` event)                                                                                |
| roomMessage       | a custom message is broadcast to all participants in the meeting                                                                                                                                  |
| message           | a custom message is targeted to a particular participant in the meeting and only the target participant receives this event                                                                       |
| activeSpeaker     | the active speaker in the meeting changes - active speaker is the participant whose audio level has most recently been the highest (kind of like LRU with the selection factor being audio level) |
